# nxopen-mcp

./: .gitignore  LICENSE  README.md  README.zh-TW.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: setup-prebuilt-index.md  setup-prebuilt-index.zh-TW.md
eval/: golden.jsonl  run_eval.py
src/nxopen_mcp/: cli.py  server.py
src/nxopen_mcp/indexer/: build.py  embedder.py  inheritance.py  parser.py
src/nxopen_mcp/retrieval/: hybrid.py  store.py
tests/: fakes.py  test_build.py  test_cli.py  test_embedder.py  test_eval.py  test_hybrid.py  test_inheritance.py  test_parser.py  test_server.py  test_store.py
tests/fixtures/: sample_doc.xml
